--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -39,6 +39,8 @@
     <types>
         <members>Blog__c</members>
         <members>Loan_Application__c</members>
+        <members>Airlines__c</members>
+        <members>EcommerceProduct__c</members>
         <name>CustomObject</name>
     </types>
     <version>55.0</version>
